--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<!--<div th:insert="fragments/navBar"></div>-->
 <div th:insert="~{fragments/navBar.html :: body}"></div>
 
 <nav class="navbar navbar-expand-sm justify-content-center category-nav">
